# polyhook

./: .cspell.json  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  Makefile  README.md  ROADMAP.md
.github/workflows/: ci.yml  release.yml
core/: Cargo.toml  build.rs  schema.json
core/src/: detect.rs  events.rs  lib.rs  parse.rs  parse_tests.rs  response.rs  response_tests.rs  tools.rs  type_impls.rs  wasm.rs
core/tests/: coverage_tests.rs  detect_tests.rs
docs/: index.html  tool-names.md
githooks/: pre-push
